fixed footer on mobile

--- a/app/resources/css/about.css
+++ b/app/resources/css/about.css
@@ -198,11 +198,11 @@ footer {
     right: 0;
     margin-top: 30px;
     padding: 20px;
-    position:fixed;
+    position: fixed;
     /* Set the fixed height of the footer here */
      /* Vertically center the text there */
     background-color: whitesmoke;
-  }
+}
   h1 {
     font-size: 40px;
     padding-left: 15px;
@@ -222,3 +222,9 @@ footer {
     background-color: transparent;
     color:grey;
 }
+
+@media screen and (max-width: 1000px) {
+    footer {
+      position: relative;
+    }
+  }
