--- a/app/resources/css/contactpage.css
+++ b/app/resources/css/contactpage.css
@@ -197,7 +197,7 @@ footer {
     right: 0;
     margin-top: 30px;
     padding: 20px;
-    position:fixed;
+    position: fixed;
     /* Set the fixed height of the footer here */
      /* Vertically center the text there */
     background-color: whitesmoke;
@@ -251,3 +251,9 @@ h1 {
     background-color: transparent;
     color:grey;
 }
+
+@media screen and (max-width: 1000px) {
+    footer {
+      position: relative;
+    }
+  }
