--- a/app/resources/css/currentbrothers.css
+++ b/app/resources/css/currentbrothers.css
@@ -224,3 +224,9 @@ h1 {
     background-color: transparent;
     color:grey;
 }
+
+@media screen and (max-width: 1000px) {
+    footer {
+      position: relative;
+    }
+  }
