--- a/app/resources/css/index.css
+++ b/app/resources/css/index.css
@@ -32,6 +32,7 @@ a.active{
 A:hover { 
     color: white; 
     background: #663399;
+    border-radius: 10%;
     TEXT-DECORATION: none; 
     font-weight: none 
 }
