--- a/app/resources/css/philanthropy.css
+++ b/app/resources/css/philanthropy.css
@@ -218,3 +218,8 @@ h1 {
     background-color: transparent;
     color:grey;
 }
+@media screen and (max-width: 1000px) {
+    footer {
+      position: relative;
+    }
+  }
